scrolling issues fixed on mobile menu

--- a/css/mobileNav.css
+++ b/css/mobileNav.css
@@ -31,12 +31,17 @@
 .open .mobile-menu{
     visibility:visible;
     right:0;
+    transition: ease-in;
     animation: fadeIn 0.3s;
 }
 
 @keyframes fadeIn {
-    0% { opacity: 0; }
-    100% { opacity: 1; }
+    0% { opacity: 0; 
+        transform: translateX(100%);
+    }
+    100% { opacity: 1; 
+        transform: translateX(0%)
+    }
   }
 
 
@@ -44,10 +49,11 @@
 .mobile-menu{
     visibility:hidden;
     position: absolute;
-    height: 100vh;
+    overflow: hidden;
+    height: 92%;
     z-index: 1;
-    margin-top: 2px;
-    overflow-y: hidden;
+    margin-top: 4px;
+    overflow: hidden;
     right:0;
     width:60%;
     background-color: white;
