--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,6 @@
   }
 
   body{
-   overflow: hidden;
    height: 100%;
 
   }
